<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/nav_payments"
        android:icon="@drawable/ic_payments"
        android:title="@string/nav_payments" />
    <item
        android:id="@+id/nav_details"
        android:icon="@drawable/ic_details"
        android:title="@string/nav_details" />
    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_history"
        android:title="@string/nav_history" />
    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/ic_notifications"
        android:title="@string/nav_notifications" />
</menu>
