<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/nav_properties"
        android:icon="@drawable/ic_properties"
        android:title="@string/nav_properties" />
    <item
        android:id="@+id/nav_tenants"
        android:icon="@drawable/ic_tenants"
        android:title="@string/nav_tenants" />
    <item
        android:id="@+id/nav_reports"
        android:icon="@drawable/ic_reports"
        android:title="@string/nav_reports" />
    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/ic_notifications"
        android:title="@string/nav_notifications" />
</menu>
