<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/md_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/space_6"
        android:paddingEnd="@dimen/space_6"
        android:paddingTop="@dimen/space_6">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_notifications"
            android:textAppearance="@style/TextAppearance.Maduka.H1" />

        <TextView
            android:id="@+id/tvSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textAppearance="@style/TextAppearance.Maduka.Small" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_4"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView android:id="@+id/filterAll" style="@style/Widget.Maduka.FilterChip" android:text="@string/notif_filter_all" />
                <TextView android:id="@+id/filterOverdue" style="@style/Widget.Maduka.FilterChip" android:layout_marginStart="@dimen/space_2" android:text="@string/notif_filter_overdue" />
                <TextView android:id="@+id/filterDueSoon" style="@style/Widget.Maduka.FilterChip" android:layout_marginStart="@dimen/space_2" android:text="@string/notif_filter_due_soon" />
                <TextView android:id="@+id/filterConfirmed" style="@style/Widget.Maduka.FilterChip" android:layout_marginStart="@dimen/space_2" android:text="@string/notif_filter_confirmed" />
            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerNotifications"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingStart="@dimen/space_6"
            android:paddingEnd="@dimen/space_6"
            android:paddingTop="@dimen/space_4"
            android:visibility="gone"
            tools:listitem="@layout/item_notification_row" />

        <TextView
            android:id="@+id/tvEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/notifications_empty"
            android:textAppearance="@style/TextAppearance.Maduka.Body"
            android:visibility="gone" />
    </FrameLayout>

</LinearLayout>
