<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/md_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/space_6"
        android:paddingEnd="@dimen/space_6"
        android:paddingTop="@dimen/space_6">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_tenants"
            android:textAppearance="@style/TextAppearance.Maduka.H1" />

        <TextView
            android:id="@+id/tvSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textAppearance="@style/TextAppearance.Maduka.Small" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerTenants"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingStart="@dimen/space_6"
            android:paddingEnd="@dimen/space_6"
            android:paddingTop="@dimen/space_4"
            android:paddingBottom="88dp"
            android:visibility="gone"
            tools:listitem="@layout/item_tenant_card" />

        <TextView
            android:id="@+id/tvEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tenants_empty"
            android:textAppearance="@style/TextAppearance.Maduka.Body"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnRegisterTenant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="@dimen/space_6"
            android:background="@drawable/bg_button_primary"
            android:paddingTop="@dimen/space_3"
            android:paddingBottom="@dimen/space_3"
            android:textAllCaps="false"
            android:textColor="@color/md_accent"
            android:textSize="16sp"
            android:text="@string/tenants_register_tenant"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvReadonlyNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="@dimen/space_6"
            android:gravity="center"
            android:text="@string/tenants_readonly_note"
            android:textAppearance="@style/TextAppearance.Maduka.Small"
            android:visibility="gone" />
    </FrameLayout>

</LinearLayout>
